# NGIN-Lib

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
cmake/: NGINLibConfig.cmake.in
examples/Sandbox/: CMakeLists.txt  main.cpp
include/NGIN/: Benchmark.hpp  Defines.hpp  NGIN.hpp  Primatives.hpp  Timer.hpp  Units.hpp
include/NGIN/Async/: ILockable.hpp
include/NGIN/Containers/: String.hpp  Vector.hpp
include/NGIN/Exceptions/: Exception.hpp
include/NGIN/Memory/: HalfPointer.hpp  IAllocator.hpp  LinearAllocator.hpp  Mallocator.hpp
include/NGIN/Meta/: EnumTraits.hpp  FunctionTraits.hpp  TypeTraits.hpp
include/NGIN/Utilities/: LSBFlag.hpp  MSBFlag.hpp
tests/: CMakeLists.txt  main.cpp
tests/Containers/: String.cpp
tests/Utils/: LSBFLag.cpp  MSBFlag.cpp
